@@ -6,6 +6,11 @@
 # element name is the name of a command and the value is
 # a script that loads the command.
 
+set auto_index(sn_ensure_emacs_running) [list source [file join $dir emacs.tcl]]
+set auto_index(sn_start_emacs) [list source [file join $dir emacs.tcl]]
+set auto_index(sn_emacs_socket_command) [list source [file join $dir emacs.tcl]]
+set auto_index(sn_emacs_socket_accept) [list source [file join $dir emacs.tcl]]
+set auto_index(sn_emacs_display_object) [list source [file join $dir emacs.tcl]]
 set auto_index(sn_bindings) [list source [file join $dir bindings.tcl]]
 set auto_index(sn_listbox_post_menu) [list source [file join $dir bindings.tcl]]
 set auto_index(sn_listbox_post_menu_update) [list source [file join $dir bindings.tcl]]
@@ -49,11 +54,6 @@ set auto_index(tkBindCancelStateKey) [list source [file join $dir bindxtnd.tcl]]
 set auto_index(tkBindSetStateKey) [list source [file join $dir bindxtnd.tcl]]
 set auto_index(tkBindDefArg) [list source [file join $dir bindxtnd.tcl]]
 set auto_index(tkBindArgKey) [list source [file join $dir bindxtnd.tcl]]
-set auto_index(mail_send_bug_report) [list source [file join $dir bugreport.tcl]]
-set auto_index(web_send_bug_report) [list source [file join $dir bugreport.tcl]]
-set auto_index(mail_bug_report) [list source [file join $dir bugreport.tcl]]
-set auto_index(sn_drop_mail_line) [list source [file join $dir bugreport.tcl]]
-set auto_index(sn_send_mail) [list source [file join $dir bugreport.tcl]]
 set auto_index(display_bug_report) [list source [file join $dir bugreport.tcl]]
 set auto_index(snBuildTarget) [list source [file join $dir buildtarget.tcl]]
 set auto_index(Class&) [list source [file join $dir classpane.tcl]]
@@ -137,13 +137,30 @@ set auto_index(::Elix&::fill) [list source [file join $dir elix.tcl]]
 set auto_index(::Elix&::source_path) [list source [file join $dir elix.tcl]]
 set auto_index(::Elix&::make_config_command) [list source [file join $dir elix.tcl]]
 set auto_index(sn_elix_preferences) [list source [file join $dir elix.tcl]]
-set auto_index(sn_ensure_emacs_running) [list source [file join $dir emacs.tcl]]
-set auto_index(sn_start_emacs) [list source [file join $dir emacs.tcl]]
-set auto_index(sn_emacs_socket_command) [list source [file join $dir emacs.tcl]]
-set auto_index(sn_emacs_socket_accept) [list source [file join $dir emacs.tcl]]
-set auto_index(sn_emacs_display_object) [list source [file join $dir emacs.tcl]]
+set auto_index(Make) [list source [file join $dir makepane.tcl]]
+set auto_index(::Make::make_history_moveup) [list source [file join $dir makepane.tcl]]
+set auto_index(::Make::make_add_history) [list source [file join $dir makepane.tcl]]
+set auto_index(sn_object_file) [list source [file join $dir makepane.tcl]]
+set auto_index(sn_make) [list source [file join $dir makepane.tcl]]
+set auto_index(add_make_tools_menu) [list source [file join $dir makepane.tcl]]
+set auto_index(make_post_menu) [list source [file join $dir makepane.tcl]]
+set auto_index(make_post_menu_update) [list source [file join $dir makepane.tcl]]
+set auto_index(make_respond_to_save_as) [list source [file join $dir makepane.tcl]]
 set auto_index(sn_error_dialog) [list source [file join $dir error.tcl]]
 set auto_index(sn_wait_dialog) [list source [file join $dir error.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::isAvailable) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::destructor) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::start) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::finish) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::ExecGrepEvent) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::close) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::grepReadableEvent) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::cancel) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::getScaleValueVariable) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::isAvailable) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::setTextWidget) [list source [file join $dir execgrepdriver.tcl]]
+set auto_index(::sourcenav::ExecGrepDriver::isValidPattern) [list source [file join $dir execgrepdriver.tcl]]
 set auto_index(add_hook) [list source [file join $dir font.tcl]]
 set auto_index(remove_hook) [list source [file join $dir font.tcl]]
 set auto_index(define_hook) [list source [file join $dir font.tcl]]
@@ -252,15 +269,23 @@ set auto_index(sn_write_socket_handler) [list source [file join $dir ipc.tcl]]
 set auto_index(sn_write_to_socket) [list source [file join $dir ipc.tcl]]
 set auto_index(sn_read_socket_handler) [list source [file join $dir ipc.tcl]]
 set auto_index(sn_read_from_socket) [list source [file join $dir ipc.tcl]]
-set auto_index(Make) [list source [file join $dir makepane.tcl]]
-set auto_index(::Make::make_history_moveup) [list source [file join $dir makepane.tcl]]
-set auto_index(::Make::make_add_history) [list source [file join $dir makepane.tcl]]
-set auto_index(sn_object_file) [list source [file join $dir makepane.tcl]]
-set auto_index(sn_make) [list source [file join $dir makepane.tcl]]
-set auto_index(add_make_tools_menu) [list source [file join $dir makepane.tcl]]
-set auto_index(make_post_menu) [list source [file join $dir makepane.tcl]]
-set auto_index(make_post_menu_update) [list source [file join $dir makepane.tcl]]
-set auto_index(make_respond_to_save_as) [list source [file join $dir makepane.tcl]]
+set auto_index(XRef&) [list source [file join $dir xrefpane.tcl]]
+set auto_index(::XRef&::all_children) [list source [file join $dir xrefpane.tcl]]
+set auto_index(::XRef&::resize) [list source [file join $dir xrefpane.tcl]]
+set auto_index(::XRef&::draw_rectangles) [list source [file join $dir xrefpane.tcl]]
+set auto_index(::XRef&::store_tags) [list source [file join $dir xrefpane.tcl]]
+set auto_index(::XRef&::xref_filter) [list source [file join $dir xrefpane.tcl]]
+set auto_index(::XRef&::reset_xref_filter) [list source [file join $dir xrefpane.tcl]]
+set auto_index(have_xref) [list source [file join $dir xrefpane.tcl]]
+set auto_index(get_key_and_scope) [list source [file join $dir xrefpane.tcl]]
+set auto_index(xref_termometer_files) [list source [file join $dir xrefpane.tcl]]
+set auto_index(xref_termometer_init) [list source [file join $dir xrefpane.tcl]]
+set auto_index(xref_cancel) [list source [file join $dir xrefpane.tcl]]
+set auto_index(xref_disp_tmeter) [list source [file join $dir xrefpane.tcl]]
+set auto_index(xref_termometer_disp) [list source [file join $dir xrefpane.tcl]]
+set auto_index(xref_delete_termometers) [list source [file join $dir xrefpane.tcl]]
+set auto_index(sn_xref_gotosymbol) [list source [file join $dir xrefpane.tcl]]
+set auto_index(sn_xref) [list source [file join $dir xrefpane.tcl]]
 set auto_index(sn_splash_dialog) [list source [file join $dir misc.tcl]]
 set auto_index(sn_show_version_window) [list source [file join $dir misc.tcl]]
 set auto_index(sn_show_splash_screen) [list source [file join $dir misc.tcl]]
@@ -307,6 +332,7 @@ set auto_index(sn_load_hide_unload_files) [list source [file join $dir misc.tcl]
 set auto_index(sn_stop_process) [list source [file join $dir misc.tcl]]
 set auto_index(sn_delete_current_project) [list source [file join $dir misc.tcl]]
 set auto_index(sn_is_project_busy) [list source [file join $dir misc.tcl]]
+set auto_index(sn_unix_check_process) [list source [file join $dir misc.tcl]]
 set auto_index(sn_choose_project) [list source [file join $dir misc.tcl]]
 set auto_index(sn_open_project) [list source [file join $dir misc.tcl]]
 set auto_index(sn_set_project_permission) [list source [file join $dir misc.tcl]]
@@ -543,6 +569,19 @@ set auto_index(RenameTarget) [list source [file join $dir targetmgr.tcl]]
 set auto_index(DeleteTarget) [list source [file join $dir targetmgr.tcl]]
 set auto_index(DeleteTargetName) [list source [file join $dir targetmgr.tcl]]
 set auto_index(CopyTarget) [list source [file join $dir targetmgr.tcl]]
+set auto_index(::sourcenav::TclGrepDriver) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::destructor) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::start) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::finish) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::cancel) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::getScaleValueVariable) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::setTextWidget) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::isValidPattern) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::processNextIndex) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::inputReadyCallback) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::TclGrepDriver::doneReadingData) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::line_grep) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(::sourcenav::print_line_grep_results) [list source [file join $dir tclgrepdriver.tcl]]
 set auto_index(tkTextSetup) [list source [file join $dir text.tcl]]
 set auto_index(tkTextDestroy) [list source [file join $dir text.tcl]]
 set auto_index(tkTextPaste) [list source [file join $dir text.tcl]]
@@ -696,44 +735,11 @@ set auto_index(sn_create_window) [list source [file join $dir window.tcl]]
 set auto_index(sn_window_add_icons) [list source [file join $dir window.tcl]]
 set auto_index(sn_window_append_print) [list source [file join $dir window.tcl]]
 set auto_index(sn_set_window_size) [list source [file join $dir window.tcl]]
-set auto_index(XRef&) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::XRef&::all_children) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::XRef&::resize) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::XRef&::draw_rectangles) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::XRef&::store_tags) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::XRef&::xref_filter) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::XRef&::reset_xref_filter) [list source [file join $dir xrefpane.tcl]]
-set auto_index(have_xref) [list source [file join $dir xrefpane.tcl]]
-set auto_index(get_key_and_scope) [list source [file join $dir xrefpane.tcl]]
-set auto_index(xref_termometer_files) [list source [file join $dir xrefpane.tcl]]
-set auto_index(xref_termometer_init) [list source [file join $dir xrefpane.tcl]]
-set auto_index(xref_cancel) [list source [file join $dir xrefpane.tcl]]
-set auto_index(xref_disp_tmeter) [list source [file join $dir xrefpane.tcl]]
-set auto_index(xref_termometer_disp) [list source [file join $dir xrefpane.tcl]]
-set auto_index(xref_delete_termometers) [list source [file join $dir xrefpane.tcl]]
-set auto_index(sn_xref_gotosymbol) [list source [file join $dir xrefpane.tcl]]
-set auto_index(sn_xref) [list source [file join $dir xrefpane.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::isAvailable) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::destructor) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::start) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::finish) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::ExecGrepEvent) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::close) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::grepReadableEvent) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::cancel) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::getScaleValueVariable) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::isAvailable) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::ExecGrepDriver::setTextWidget) [list source [file join $dir execgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::destructor) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::start) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::finish) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::cancel) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::getScaleValueVariable) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::setTextWidget) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::processNextIndex) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::inputReadyCallback) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::TclGrepDriver::doneReadingData) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::line_grep) [list source [file join $dir tclgrepdriver.tcl]]
-set auto_index(::sourcenav::print_line_grep_results) [list source [file join $dir tclgrepdriver.tcl]]
+set auto_index(PRINT_cancel) [list source [file join $dir winprint.tcl]]
+set auto_index(PRINT_pagecounter_dialog) [list source [file join $dir winprint.tcl]]
+set auto_index(PRINT_query) [list source [file join $dir winprint.tcl]]
+set auto_index(PRINT_text) [list source [file join $dir winprint.tcl]]
+set auto_index(PRINT_init) [list source [file join $dir winprint.tcl]]
+set auto_index(PRINT_page) [list source [file join $dir winprint.tcl]]
+set auto_index(PRINT_postscript_query) [list source [file join $dir winprint.tcl]]
+set auto_index(sn_winprint_dialog) [list source [file join $dir winprint.tcl]]
